WT-12935: fix missing background color of hrh2
Fix missing background color for horizontal resize handle in default
theme.

--- a/resources/themes/default/wt.css
+++ b/resources/themes/default/wt.css
@@ -329,6 +329,10 @@ span.Wt-disabled, fieldset.Wt-disabled legend {
   background: url(splitter-h.png) no-repeat 50% 50%;
 }
 
+.Wt-hrh2 {
+  background-color: #CCC;
+}
+
 .Wt-vrh2 {
   background-color: #CCC;
 }
